infrastructure/gateway-api/gateway.yaml
# GatewayClass — controller Envoy Gateway mengacu ke EnvoyProxy config
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: course-envoy-proxy
    namespace: argocd
---
# Gateway — listener HTTP
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: course-gateway
  namespace: argocd
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
          - kind: HTTPRoute
        namespaces:
          from: Selector
          selector:
            matchLabels:
              shared-gateway-access: "true"
